added detail to readme page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*hero style end*/
 .float-left {
     float: left;
     margin-right: 25px;
